[gd_scene load_steps=2 format=3 uid="uid://d3ycdm22efqyq"]

[ext_resource type="Script" uid="uid://qi4qb347fwmd" path="res://Scripts/server_browser.gd" id="1_cvrjd"]

[node name="ServerBrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cvrjd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -65.0
offset_right = 66.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Available Servers"

[node name="ServerList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
auto_width = true
auto_height = true
item_count = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Refresh" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="JoinButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Searching..."

[connection signal="item_selected" from="VBoxContainer/ServerList" to="." method="_on_server_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Refresh" to="." method="_on_refresh_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_back_button_pressed"]
